<?xml version="1.0"?>
<package format="3">
  <name>ee_pose_broadcaster</name>
  <version>0.0.0</version>
  <description>Broadcaster to publish ee pose</description>
  <maintainer email="m.bednarczyk@unistra.fr">m.bednarczyk</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>rcutils</build_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rcutils</exec_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
